--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Periodic Snake</title>
-    <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="css/index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -11,8 +12,8 @@
         <div id="pause">
           <div>paused</div>
           <div>(press space)</div>
-          <img id="instructions" src="lib/images/instructions.png"/>
-          <img id="controls" src="lib/images/controls.png"/>
+          <img id="instructions" src="images/instructions.png"/>
+          <img id="controls" src="images/controls.png"/>
         </div>
 
         <div id="game-over">
@@ -30,20 +31,20 @@
 
     </div>
 
-    <audio src="lib/audio/add.wav" preload="auto"></audio>
-    <audio src="lib/audio/remove.wav" preload="auto"></audio>
-    <audio src="lib/audio/shrink.wav" preload="auto"></audio>
+    <audio src="audio/add.wav" preload="auto"></audio>
+    <audio src="audio/remove.wav" preload="auto"></audio>
+    <audio src="audio/shrink.wav" preload="auto"></audio>
 
     <script type="application/javascript" src="vendor/keymaster.js"></script>
 
-    <script type="application/javascript" src="lib/util.js"></script>
-    <script type="application/javascript" src="lib/movingObject.js"></script>
-    <script type="application/javascript" src="lib/snake.js"></script>
-    <script type="application/javascript" src="lib/snakeSegment.js"></script>
-    <script type="application/javascript" src="lib/path.js"></script>
-    <script type="application/javascript" src="lib/apple.js"></script>
-    <script type="application/javascript" src="lib/game.js"></script>
-    <script type="application/javascript" src="lib/gameView.js"></script>
+    <script type="application/javascript" src="javascripts/util.js"></script>
+    <script type="application/javascript" src="javascripts/movingObject.js"></script>
+    <script type="application/javascript" src="javascripts/snake.js"></script>
+    <script type="application/javascript" src="javascripts/snakeSegment.js"></script>
+    <script type="application/javascript" src="javascripts/path.js"></script>
+    <script type="application/javascript" src="javascripts/apple.js"></script>
+    <script type="application/javascript" src="javascripts/game.js"></script>
+    <script type="application/javascript" src="javascripts/gameView.js"></script>
 
     <script type="application/javascript">
       (function () {
