--- a/lib/css/index.css
+++ b/lib/css/index.css
@@ -1,17 +1,20 @@
 body {
   background: rgb(77, 77, 77);
+
 }
 
 * {
   font-family: sans-serif;
+  height
 }
 
 #game {
-  position: relative;
-  transform: translateY(-50%);
+  position: absolute;
+  transform: translate(-50%, -50%);
   top: 50%;
+  left: 50%;
   width: 1000px;
-  margin: 0 auto;
+  height: 600px;
   box-shadow: 0 0 80px black;
 }
 
