--- a/lib/css/index.css
+++ b/lib/css/index.css
@@ -22,7 +22,7 @@ body {
   position: absolute;
   padding: 5px;
   outline: 1px dashed black;
-  font-size: 25x;
+  font-size: 25px;
 }
 
 #game > #screens > * {
